fix: increase spacing between items in the header menu (#191)

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -200,6 +200,10 @@ img {
 .gdoc-menu-header {
   &__items {
     display: inline-block;
+
+    :not(:last-child) {
+      margin-right: $padding-8;
+    }
   }
 
   &__control {
